--- a/asset/css/layout/header.scss
+++ b/asset/css/layout/header.scss
@@ -620,6 +620,90 @@
                     }
                 }
             }
+            &__seven{
+                background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.466),rgba(255, 255, 255, 0.466)), url('/asset/image/UntitledMOvie.png');
+                
+                height: auto;
+                width: 100%;
+                position: relative;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 100%;
+                transition: all 0.3s ease-in-out;
+                &:hover{
+                    
+                    background-size: 150%;
+                    & .content__icon-button{
+                        background-color: #2f2e2e94;
+                        color: #fff;
+                        padding: 60px 0;
+                    }
+                }
+                & .content__icon-button{
+                    padding: 30px;
+                    display: flex;
+                    font-size: 20px;
+                    color: $text-black;
+                    @include fontMeri(400);
+                    align-items: center;
+                    justify-content: center;
+                    margin: auto;
+                    transition: all 0.3s ease-in-out;
+                    &:hover{
+                        background-color: rgba(255, 255, 255, 0.466);
+                        border: 6px solid $text-black;
+                        color: $text-black;
+                    }
+                    & i{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        margin-right: 10px;
+                    }
+                }
+            }
+            &__eight{
+                background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.466),rgba(255, 255, 255, 0.466)), url('/asset/image/Untit.png');
+                
+                height: auto;
+                width: 100%;
+                position: relative;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 100%;
+                transition: all 0.3s ease-in-out;
+                &:hover{
+                    
+                    background-size: 150%;
+                    & .content__icon-button{
+                        background-color: #2f2e2e94;
+                        color: #fff;
+                        padding: 60px 0;
+                    }
+                }
+                & .content__icon-button{
+                    padding: 30px;
+                    display: flex;
+                    font-size: 20px;
+                    color: $text-black;
+                    @include fontMeri(400);
+                    align-items: center;
+                    justify-content: center;
+                    margin: auto;
+                    transition: all 0.3s ease-in-out;
+                    &:hover{
+                        background-color: rgba(255, 255, 255, 0.466);
+                        border: 6px solid $text-black;
+                        color: $text-black;
+                    }
+                    & i{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        margin-right: 10px;
+                    }
+                }
+            }
             & .section-content__title{
                 & .content__title-name{
                     margin-top: 20px;
