--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -543,6 +543,76 @@ ul {
             align-items: center;
             justify-content: center;
             margin-right: 10px; }
+      .fullpage .section-3 .section-content__seven {
+        background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.466), rgba(255, 255, 255, 0.466)), url("/asset/image/UntitledMOvie.png");
+        height: auto;
+        width: 100%;
+        position: relative;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+        transition: all 0.3s ease-in-out; }
+        .fullpage .section-3 .section-content__seven:hover {
+          background-size: 150%; }
+          .fullpage .section-3 .section-content__seven:hover .content__icon-button {
+            background-color: #2f2e2e94;
+            color: #fff;
+            padding: 60px 0; }
+        .fullpage .section-3 .section-content__seven .content__icon-button {
+          padding: 30px;
+          display: flex;
+          font-size: 20px;
+          color: #2F2E2E;
+          font-family: 'Poppins', sans-serif;
+          font-weight: 400;
+          align-items: center;
+          justify-content: center;
+          margin: auto;
+          transition: all 0.3s ease-in-out; }
+          .fullpage .section-3 .section-content__seven .content__icon-button:hover {
+            background-color: rgba(255, 255, 255, 0.466);
+            border: 6px solid #2F2E2E;
+            color: #2F2E2E; }
+          .fullpage .section-3 .section-content__seven .content__icon-button i {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 10px; }
+      .fullpage .section-3 .section-content__eight {
+        background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.466), rgba(255, 255, 255, 0.466)), url("/asset/image/Untit.png");
+        height: auto;
+        width: 100%;
+        position: relative;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+        transition: all 0.3s ease-in-out; }
+        .fullpage .section-3 .section-content__eight:hover {
+          background-size: 150%; }
+          .fullpage .section-3 .section-content__eight:hover .content__icon-button {
+            background-color: #2f2e2e94;
+            color: #fff;
+            padding: 60px 0; }
+        .fullpage .section-3 .section-content__eight .content__icon-button {
+          padding: 30px;
+          display: flex;
+          font-size: 20px;
+          color: #2F2E2E;
+          font-family: 'Poppins', sans-serif;
+          font-weight: 400;
+          align-items: center;
+          justify-content: center;
+          margin: auto;
+          transition: all 0.3s ease-in-out; }
+          .fullpage .section-3 .section-content__eight .content__icon-button:hover {
+            background-color: rgba(255, 255, 255, 0.466);
+            border: 6px solid #2F2E2E;
+            color: #2F2E2E; }
+          .fullpage .section-3 .section-content__eight .content__icon-button i {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 10px; }
       .fullpage .section-3 .section-content .section-content__title .content__title-name {
         margin-top: 20px;
         font-size: 30px;
