--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -828,6 +828,52 @@ ul {
   justify-content: center;
   margin-right: 10px;
 }
+.fullpage .section-3 .section-content__ten {
+  background-image: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.466),
+      rgba(255, 255, 255, 0.466)
+    ),
+    url("/asset/image/Screenshot_3.png");
+  height: auto;
+  width: 100%;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  transition: all 0.3s ease-in-out;
+}
+.fullpage .section-3 .section-content__ten:hover {
+  background-size: 150%;
+}
+.fullpage .section-3 .section-content__ten:hover .content__icon-button {
+  background-color: #2f2e2e94;
+  color: #fff;
+  padding: 60px 0;
+}
+.fullpage .section-3 .section-content__ten .content__icon-button {
+  padding: 30px;
+  display: flex;
+  font-size: 20px;
+  color: #2f2e2e;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  transition: all 0.3s ease-in-out;
+}
+.fullpage .section-3 .section-content__ten .content__icon-button:hover {
+  background-color: rgba(255, 255, 255, 0.466);
+  border: 6px solid #2f2e2e;
+  color: #2f2e2e;
+}
+.fullpage .section-3 .section-content__ten .content__icon-button i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
 .fullpage
   .section-3
   .section-content
